--- a/main.html
+++ b/main.html
@@ -8,9 +8,23 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
 
+	<ul>
+		<li>
+			<a href="https://en.wikipedia.org/wiki/Golden_Retriever">
+				<img src="https://upload.wikimedia.org/wikipedia/commons/9/99/Golden_Retriever_Carlos_%2810500993856%29.jpg" alt="Golden Retriever">
+			</a>
+		</li>
+		<li>
+			<a href="https://en.wikipedia.org/wiki/Poodle">
+				<img src="https://upload.wikimedia.org/wikipedia/commons/3/32/Toy_Poodle_black.jpg" alt="Poodle">
+			</a>
+		</li>
+	</ul>
+
+	<script type="text/javascript" src="./script.js"></script>
 </body>
+
+</html>
 
 </html>
