--- a/main.html
+++ b/main.html
@@ -12,19 +12,17 @@
 	<ul>
 		<li>
 			<a href="https://en.wikipedia.org/wiki/Golden_Retriever">
-				<img src="https://upload.wikimedia.org/wikipedia/commons/9/99/Golden_Retriever_Carlos_%2810500993856%29.jpg" alt="Golden Retriever">
+				<img src="https://upload.wikimedia.org/wikipedia/commons/9/99/Golden_Retriever_Carlos_%2810500993856%29.jpg">
 			</a>
 		</li>
 		<li>
 			<a href="https://en.wikipedia.org/wiki/Poodle">
-				<img src="https://upload.wikimedia.org/wikipedia/commons/3/32/Toy_Poodle_black.jpg" alt="Poodle">
+				<img src="https://upload.wikimedia.org/wikipedia/commons/3/32/Toy_Poodle_black.jpg">
 			</a>
 		</li>
 	</ul>
 
 	<script type="text/javascript" src="./script.js"></script>
 </body>
-
-
 
 </html>
